variablesgdemo[gh].tf
provider "aws" {
  region     = "us-east-1"
  #storing credentials in the config files is not recommended
  access_key = "place  access key here"
  secret_key = "secret key"
}

resource "aws_security_group" "var_demo" {
  name        = "kplabs-variables"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    #do not forget to set the variables in your designated variable config file
    cidr_blocks = [var.vpn_ip]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.vpn_ip]
  }

  ingress {
    from_port   = 53
    to_port     = 53
    protocol    = "tcp"
    cidr_blocks = [var.vpn_ip]
  }
}
